# dm-rt1170evkb-full-appliance

./: .cproject  .gitignore  .project  README.md  README_an_template.md  Readme.md  SW-Content-Register.txt  dm-rt1170-full-appliance.xml  dm-rt1170evkb-full-appliance.xml  license.txt  script.jlink
AirconGUI/: AirconGUI.guiguider
AirconGUI/add-assets/: _aircon_cool_2_92x102.c  _aircon_cool_3_92x102.c  _aircon_cool_4_92x102.c  _aircon_cool_5_92x102.c  _aircon_cool_6_92x102.c  _aircon_fan_2_98x98.c  _aircon_fan_3_98x98.c  _aircon_fan_4_98x98.c  _aircon_fan_5_98x98.c  _aircon_fan_6_98x98.c  _aircon_menu_swing_02_298x39.c  _aircon_menu_swing_04_298x39.c  _aircon_menu_swing_06_298x39.c  _aircon_swing_10_632x113.c  _aircon_swing_11_632x113.c  _aircon_swing_12_632x113.c  _aircon_swing_13_632x113.c  _aircon_swing_14_632x113.c  _aircon_swing_15_632x113.c  _aircon_swing_2_632x113.c  _aircon_swing_3_632x113.c  _aircon_swing_4_632x113.c  _aircon_swing_5_632x113.c  _aircon_swing_6_632x113.c  _aircon_swing_7_632x113.c  _aircon_swing_8_632x113.c  _aircon_swing_9_632x113.c  _icn_dry_27x31.c  _icn_fan_27x31.c  _icn_fan_high_31x27.c  _oven_fan_light_4_120x119.c  lv_font_Antonio_Regular_50.c
AirconGUI/custom/: custom.c  ui_Aircon.c  ui_Aircon.h  ui_Animations.h  ui_Animatios.c  ui_Hood.c  ui_Hood.h  ui_Oven.c  ui_Oven.h
AirconGUI/import/lottie/: KNiPNozN4m.json
AirconGUI/lvgl-simulator/: Makefile  decoder.h  lv_conf.h  main.c
AirconGUI/lvgl/src/core/: lv_obj_scroll.c
AirconGUI/lvgl/src/extra/: extra.mk
AirconGUI/sdk/Core/CMSIS/: CMSIS_Include_core_cm_MIMXRT1176_cm7.cmake
AirconGUI/sdk/Core/board/: driver_xmcd_evkmimxrt1170.cmake  driver_xmcd_evkmimxrt1170_MIMXRT1176_cm7.cmake  lvgl_support.h
AirconGUI/sdk/Core/device/: device_MIMXRT1176_CMSIS.MIMXRT1176.cmake  device_MIMXRT1176_CMSIS_MIMXRT1176_cm7.cmake  device_MIMXRT1176_system.MIMXRT1176.cmake  device_MIMXRT1176_system_MIMXRT1176_cm7.cmake
AirconGUI/sdk/Core/doc/: readme.txt
AirconGUI/sdk/Core/drivers/: driver_anatop_ai.MIMXRT1176.cmake  driver_anatop_ai_MIMXRT1176_cm7.cmake  driver_cache_armv7_m7.MIMXRT1176.cmake  driver_cache_armv7_m7_MIMXRT1176_cm7.cmake  driver_clock.MIMXRT1176.cmake  driver_clock_MIMXRT1176_cm7.cmake  driver_common.MIMXRT1176.cmake  driver_common_MIMXRT1176_cm7.cmake  driver_dcdc_soc.MIMXRT1176.cmake  driver_dcdc_soc_MIMXRT1176_cm7.cmake  driver_elcdif.MIMXRT1176.cmake  driver_elcdif_MIMXRT1176_cm7.cmake  driver_igpio.MIMXRT1176.cmake  driver_igpio_MIMXRT1176_cm7.cmake  driver_iomuxc.MIMXRT1176.cmake  driver_iomuxc_MIMXRT1176_cm7.cmake  driver_lcdifv2.MIMXRT1176.cmake  driver_lcdifv2_MIMXRT1176_cm7.cmake  driver_lpi2c.MIMXRT1176.cmake  driver_lpi2c_MIMXRT1176_cm7.cmake  driver_lpuart.MIMXRT1176.cmake  driver_lpuart_MIMXRT1176_cm7.cmake  driver_memory.MIMXRT1176.cmake  driver_memory_MIMXRT1176_cm7.cmake  driver_mipi_dsi_split.MIMXRT1176.cmake  driver_mipi_dsi_split_MIMXRT1176_cm7.cmake  driver_pmu_1.MIMXRT1176.cmake  driver_pmu_1_MIMXRT1176_cm7.cmake  driver_pxp.MIMXRT1176.cmake  driver_pxp_MIMXRT1176_cm7.cmake  driver_soc_mipi_csi2rx.MIMXRT1176.cmake  driver_soc_mipi_csi2rx_MIMXRT1176_cm7.cmake  driver_soc_src.MIMXRT1176.cmake  driver_soc_src_MIMXRT1176_cm7.cmake  fsl_clock.c  fsl_mipi_dsi.c
AirconGUI/sdk/Core/lvgl/: middleware_lvgl.cmake  middleware_lvgl_MIMXRT1176_cm7.cmake
AirconGUI/sdk/Core/rlottie/: middleware_rlottie.cmake  middleware_rlottie_MIMXRT1176_cm7.cmake
AirconGUI/sdk/Core/source/: FreeRTOSConfig.h  h264_dec.cpp  h264_dec.h  lv_conf.h
AirconGUI/sdk/Core/touchpanel/: driver_gt911.MIMXRT1176.cmake  (+1 more)
AirconGUI/sdk/armgcc/: CMakeLists.txt  all_lib_device.cmake  config.cmake  flags.cmake  flags.cmake_template  mcux_config.cmake
AirconGUI/sdk/armgcc/deployment/: MIMXRT1176xxxxx_part.xml
AirconGUI/sdk/armgcc/startup/: device_MIMXRT1176_startup.MIMXRT1176.cmake  device_MIMXRT1176_startup_MIMXRT1176_cm7.cmake
AirconGUI/sdk/iar/: lvgl_guider_cm7.ewp  lvgl_guider_cm7.eww  lvgl_guider_cm7_ewp.template
AirconGUI/sdk/mcuxpresso/: .cproject  .project  .project_template
AirconGUI/sdk/mdk/: lvgl_guider_cm7.uvmpw  lvgl_guider_cm7.uvoptx  lvgl_guider_cm7.uvprojx  lvgl_guider_cm7_uvprojx.template
AirconGUI/temp/: board.h  conf.json
Debug/: evkmimxrt1170_appliance_oven_Debug.ld  evkmimxrt1170_appliance_oven_Debug_library.ld  evkmimxrt1170_appliance_oven_Debug_memory.ld
Release/: evkmimxrt1170_appliance_oven_Release.ld  evkmimxrt1170_appliance_oven_Release_library.ld  evkmimxrt1170_appliance_oven_Release_memory.ld
add-assets/: _aircon_cool_2_92x102.c  _aircon_cool_3_92x102.c  _aircon_cool_4_92x102.c  _aircon_fan_3_98x98.c  _aircon_fan_4_98x98.c  _aircon_fan_5_98x98.c  _aircon_menu_swing_03_298x39.c  _aircon_menu_swing_05_298x39.c  _aircon_menu_swing_07_298x39.c  _aircon_menu_swing_08_298x39.c  _aircon_menu_swing_09_298x39.c  _aircon_menu_swing_10_298x39.c  _aircon_menu_swing_11_298x39.c  _aircon_menu_swing_12_298x39.c  _aircon_menu_swing_13_298x39.c  _aircon_menu_swing_14_298x39.c  _aircon_menu_swing_15_298x39.c  _aircon_menu_swing_16_298x39.c  _aircon_menu_swing_17_298x39.c  _aircon_swing_10_632x113.c  _aircon_swing_11_632x113.c  _aircon_swing_13_632x113.c  _aircon_swing_14_632x113.c  _aircon_swing_15_632x113.c  _aircon_swing_2_632x113.c  _aircon_swing_4_632x113.c  _aircon_swing_6_632x113.c  _aircon_swing_7_632x113.c  _aircon_swing_8_632x113.c  _aircon_swing_9_632x113.c  _icn_dry_27x31.c  _icn_fan_27x31.c  _icn_fan_high_31x27.c  _oven_fan_light_2_120x119.c  _oven_fan_light_3_120x119.c  _oven_menu_door_9_257x269.c  add-assets.mk
board/: board.h  lvgl_support.c  pin_mux.c  pin_mux.h
component/uart/: fsl_adapter_lpuart.c
custom/: custom.h  ui_Aircon.c  ui_Aircon.h  ui_Animations.h  ui_Animatios.c  ui_Hood.c  ui_Hood.h  ui_Oven.c  ui_Oven.h
doc/: readme.txt
linkscripts/: data.ldt  main_text.ldt  main_text_section.ldt
source/: AFE_VoiceSeeker.h  FreeRTOSConfig.h  lv_conf.h  lvgl_guider.c  mic_proc.c  mic_proc.h  os_hooks.c  ui_Aircon.c  ui_Aircon.h  vit_proc.c  vit_proc.h
vit/RT1170_CortexM7/Lib/: VIT_Model_Aircon.h  VIT_Model_Hood.h  VIT_Model_Oven.h  VIT_Model_en.h
(+56 files in other folders)
